--- a/catalog.html
+++ b/catalog.html
@@ -7,9 +7,10 @@
 <body>
     <header class="main-header">
        <div class="header-top">
-           <div class="logo"><a href="index.html"><img src="img/icon/logo-technomart.svg" alt="ТЕХНОМАРТ"></a></div>
+           <div class="logo"><a><img src="img/icon/logo-technomart.svg" alt="Логотип магазина ТЕХНОМАРТ"></a></div>
            <div class="search">
-              <input type="text" class="search-input" placeholder="Поиск:">
+              <label class="visually-hidden" for="header-search">Поиск</label>
+              <input type="text" class="search-input" placeholder="Поиск:" id="header-search">
            </div>
            <ul class="header-list">
                <li class="bookmarks"><a href="#">Закладки:</a></li>
@@ -24,8 +25,8 @@
                г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
            </div>
            <ul class="user-navigation">
-               <li class="login-link">Войти</li>
-               <li class="check-in">Регистрация</li>
+               <li class="login-link"><a href="#">Войти</a></li>
+               <li class="check-in"><a href="#">Регистрация</a></li>
            </ul>
        </div>
        <nav class="main-navigation">
@@ -50,7 +51,47 @@
        <h2>Перфораторы</h2>
        <section class="filter">
            <h3 class="visually-hidden">Фильтр товаров</h3>
-           <!-- Здесь будет форма -->
+           <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+               <fieldset>
+                   <legend>Производители:</legend>
+                   <ul>
+                       <li class="filter-option">
+                           <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="bosh" id="filter-bosh" checked>
+                           <label for="filter-bosh">Bosh</label>
+                       </li>
+                       <li class="filter-option">
+                           <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="interscol" id="filter-interscol">
+                           <label for="filter-interscol">Интерскол</label>
+                       </li>
+                       <li class="filter-option">
+                           <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="makita" id="filter-makita" checked>
+                           <label for="filter-makita">Makita</label>
+                       </li>
+                       <li class="filter-option">
+                           <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="dewalt" id="filter-dewalt">
+                           <label for="filter-dewalt">Dewalt</label>
+                       </li>
+                       <li class="filter-option">
+                           <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hitachi" id="filter-hitachi">
+                           <label for="filter-hitachi">Hitachi</label>
+                       </li>
+                   </ul>
+               </fieldset>
+               <fieldset>
+                   <legend>Питание:</legend>
+                   <ul>
+                       <li class="filter-option">
+                           <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="accumulator" id="filter-accumulator">
+                           <label for="filter-accumulator">Аккумуляторные</label>
+                       </li>
+                       <li class="filter-option">
+                           <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="network" id="filter-network">
+                           <label for="filter-network">Сетевой</label>
+                       </li>
+                   </ul>
+               </fieldset>
+               <button class="filter-btn btn" type="submit">Показать</button>
+           </form>
        </section>
 
        <section class="catalog">
@@ -219,6 +260,16 @@
            </div>
        </div>
    </footer>
+
+   <section class="modal modal-add">
+       <h2 class="vissually-hidden">Добавление товара в корзину</h2>
+       <p>Товар добавлен в корзину!</p>
+       <div class="modal-add-menu">
+           <a href="#">Оформить заказ</a>
+           <button class="btn btn-continue" type="button">Продолжить покупки</button>
+       </div>
+       <button class="modal-close">Закрыть</button>
+   </section>
 
 </body>
 </html>
