--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <body>
    <header class="main-header">
        <div class="header-top">
-           <div class="logo"><a><img src="img/icon/logo-technomart.svg" alt="ТЕХНОМАРТ"></a></div>
+           <div class="logo"><a><img src="img/icon/logo-technomart.svg" alt="Логотип магазина ТЕХНОМАРТ"></a></div>
            <div class="search">
-              <input type="text" class="search-input" placeholder="Поиск:">
+              <label class="visually-hidden" for="header-search">Поиск</label>
+              <input type="text" class="search-input" placeholder="Поиск:" id="header-search">
            </div>
            <ul class="header-list">
                <li class="bookmarks"><a href="#">Закладки:</a></li>
@@ -24,8 +25,8 @@
                г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
            </div>
            <ul class="user-navigation">
-               <li class="login-link">Войти</li>
-               <li class="check-in">Регистрация</li>
+               <li class="login-link"><a href="#">Войти</a></li>
+               <li class="check-in"><a href="#">Регистрация</a></li>
            </ul>
        </div>
        <nav class="main-navigation">
@@ -186,6 +187,36 @@
            </div>
        </div>
    </footer>
+
+    <section class="modal modal-connection">
+        <h2 class="visuall-hidden">Напишите нам</h2>
+        <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+            <p>
+                <label for="user-name">Ваше имя:</label>
+                <input id="user-name" type="text" class="connection-user-name" name="name" placeholder="Имя Фамилия">
+            </p>
+            <p>
+                <label for="user-email">Ваше e-mail:</label>
+                <input id="user-email" type="email" class="connection-user-email" name="email" placeholder="email@example.com">
+            </p>
+            <p>
+                <label for="user-letter">Текст письма:</label>
+                <textarea id="user-letter" class="connection-letter" name="letter" rows="7">В свободной форме</textarea>
+            </p>
+            <button class="btn" type="submit">Отправить</button>
+        </form>
+        <button class="modal-close">Закрыть</button>
+    </section>
+
+    <section class="modal modal-map">
+        <h2 class="visually-hidden">
+            Как до нас добраться
+        </h2>
+        <p>
+            <img src="img/big-map.jpg" width="940" height="446" alt="Офис компании по адресу Большая Конюшенная 19/8, Санкт-Петербург">
+        </p>
+        <button class="modal-close">Закрыть</button>
+    </section>
 
   </body>
 </html>
